--- a/app/templates/analysis.html
+++ b/app/templates/analysis.html
@@ -2,7 +2,8 @@
 {% block content %}
 <ul class="tab">
 	<button class="tablinks" onclick="openTab(event, 'Survivor-Perks')">Survivor Perks</button>
-	<button class="tablinks" onclick="openTab(event, 'Killer-Addons')" id="defaultOpen">Killer Addons</button>
+	<button class="tablinks" onclick="openTab(event, 'Killer-Addons')">Killer Addons</button>
+	<button class="tablinks" onclick="openTab(event, 'Survivor-Items')" id="defaultOpen">Items</button>
 
 </ul>
 
@@ -58,7 +59,6 @@
 			</h1>
 			</br>
 			</br>
-			{% if name in ['Hillbilly', 'Trapper', 'Hag', 'Wraith'] %}
 			<div class="container-stats">
 				{% for col,stat in Killers[name].items() %}
 				<button class="stats">
@@ -68,7 +68,9 @@
 					<div class="stats-tabs">
 						<div class="stats-main">
 							<center>
-								<p class="stats-value" value="" onclick="calcVal(this, `{{stat['Base-'+name]}}`, `{{stat['Static-'+name]}}`); this.onclick=null;"></p>
+								<p class="stats-value" value=""
+									onclick="calcVal(this, `{{stat['Base-'+name]}}`, `{{stat['Static-'+name]}}`); this.onclick=null;">
+								</p>
 							</center>
 							{% for addon,val in stat.items() %}
 							<center>
@@ -78,7 +80,9 @@
 						</div>
 						<div class="stats-temp tempSlot hidden" id={{ name + '-temp-stats' }}>
 							<center>
-								<p class="stats-value-temp" value="" onclick="calcVal(this, `{{stat['Base-'+name]}}`, `{{stat['Static-'+name]}}`); this.onclick=null;"></p>
+								<p class="stats-value-temp" value=""
+									onclick="calcVal(this, `{{stat['Base-'+name]}}`, `{{stat['Static-'+name]}}`); this.onclick=null;">
+								</p>
 							</center>
 							{% for addon,val in stat.items() %}
 							<center>
@@ -90,7 +94,6 @@
 				</button>
 				{% endfor %}
 			</div>
-			{% endif %}
 			<div class="addonsMain">
 				<div class="addonsContent">
 					{% for rarity,addons in info['addons'].items() %}
@@ -153,6 +156,76 @@
 		</div>
 		{% endfor %}
 	</div>
+</div>
+<div class="tabcontent" id="Survivor-Items">
+	<div class="itemsTab">
+		<div class="itemsSubTab">
+			<div class="itemsSubTabItems">
+				{% for Rarity in ['Common', 'Uncommon', 'Rare', 'Very Rare', 'Ultra Rare', 'Event'] %}
+				<div class="{{ ''.join(Rarity.split()) + 'Section'}} raritySection flex-container">
+					{% for name,info in Items.items() %}
+					{% for rarity,items in info['versions'].items() %}
+					{% for item in items %}
+					{% if rarity ==  Rarity %}
+					<div class="container-items">
+						<img class="item-image lozad" data-src={{ item["image-alt"] }} height="80" width="80"
+							draggable="true" ondragstart="drag(event)" id={{ item.name }} credit="u/ambieobambie">
+						<div class="overlay">
+							<span>{{ item.name }}</span>
+							<p>{{ item.description }}</p>
+						</div>
+					</div>
+					{% endif %}
+					{% endfor %}
+					{% endfor %}
+					{% endfor %}
+				</div>
+				{% endfor %}
+			</div>
+			<div class="itemsSubTabAddons">
+				{% for Rarity in ['Common', 'Uncommon', 'Rare', 'Very Rare', 'Ultra Rare', 'Event'] %}
+				<div class="{{ ''.join(Rarity.split()) + 'Section'}} raritySection flex-container">
+					{% for name,info in Items.items() %}
+					{% for rarity,items in info['addons'].items() %}
+					{% for item in items %}
+					{% if rarity ==  Rarity %}
+					<div class="container-items">
+						<img class="addon-image lozad" data-src={{ item["addon-image-alt"] }} height="80" width="80"
+							draggable="true" ondragstart="drag(event)" id={{ item.name }} credit="u/ambieobambie">
+						<div class="overlay">
+							<span>{{ item["addon-name"] }}</span>
+							<p>{{ item["addon-description"] }}</p>
+						</div>
+					</div>
+					{% endif %}
+					{% endfor %}
+					{% endfor %}
+					{% endfor %}
+				</div>
+				{% endfor %}
+			</div>
+		</div>
+		<!-- <div class="mainItemSlots">
+			<div class="itemSlots">
+				<div class="itemSlot" id="itemSlotMain" align="center" ondrop="drop(event, 'itemSlotMain', false)"
+					ondragover="allowDrop(event)">
+					<input class="clear-img-item" type="image" onclick="clearSlot('itemSlotMain', false)"
+						src="static/images/clearbtn.png" alt="Clear" width="20" height="20" align="right">
+				</div>
+			</div>
+			<div class="itemSlots tempSlot">
+				<div class="itemSlot" id="itemSlotTempMain" align="center"
+					ondrop="drop(event, 'itemSlotTempMain', true)" ondragover="allowDrop(event)">
+					<input class="clear-img-item" type="image" onclick="clearSlot('itemSlotTempMain', true)"
+						src="static/images/clearbtn.png" alt="Clear" width="20" height="20" align="right">
+				</div>
+			</div>
+			<div class="moveButton">
+				<button class="moveSlots" id="items-move" onclick="moveSlot(`{{name}}`)">Move
+					Slots</button>
+			</div> -->
+	</div>
+</div>
 </div>
 <script>
 	var elems = document.getElementsByClassName('overlay-content')
