--- a/app/templates/analysis.html
+++ b/app/templates/analysis.html
@@ -51,7 +51,7 @@
 			{% for name,info in Killer_Addons.items() %}
 			<button class="subtablinks" onclick="openSubTab(event, '{{ name }}'); clearSlots('{{ name }}')">
 				<div>{{ name }}</div>
-				<img class="lozad" data-src={{ info['killer-image-alt'] }} height="80" width="80" credit="@WholeyeetRye">
+				<img class="lozad" data-src={{ info['killer-image-alt'] }} height="80" width="80" credit="@sherman_amnezis">
 			</button>
 			{% endfor %}
 		</ul>
