--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -37,7 +37,7 @@
 	<ul class="subtab">
 		{% for name,info in Killer_Addons.items() %}
 		<button class="subtablinks" onclick="openSubTab(event, '{{ name }}'); dimElem(event, 'subtablinks');">
-			<img class="lozad" data-src={{ info['killer-image-alt'] }} height="125" width="125" credit="@WholeyeetRye">
+			<img class="lozad" data-src={{ info['killer-image-alt'] }} height="125" width="125" credit="@sherman_amnezis">
 			<figcaption>{{ name }}</figcaption>
 		</button>
 		{% endfor %}
