"Added number to number calc for addon"

--- a/app/templates/analysis.html
+++ b/app/templates/analysis.html
@@ -2,8 +2,8 @@
 {% block content %}
 <ul class="tab">
 	<button class="tablinks" onclick="openTab(event, 'Survivor-Perks')">Survivor Perks</button>
-	<button class="tablinks" onclick="openTab(event, 'Killer-Addons')">Killer Addons</button>
-	<button class="tablinks" onclick="openTab(event, 'Survivor-Items')" id="defaultOpen">Items</button>
+	<button class="tablinks" onclick="openTab(event, 'Killer-Addons')" id="defaultOpen">Killer Addons</button>
+	<button class="tablinks" onclick="openTab(event, 'Survivor-Items')">Items</button>
 
 </ul>
 
