"Fixed overlay text wrap"

--- a/app/templates/analysis.html
+++ b/app/templates/analysis.html
@@ -49,7 +49,7 @@
 	<div class="killerTab">
 		<ul class="subtab">
 			{% for name,info in Killer_Addons.items() %}
-			<button class="subtablinks" onclick="openSubTab(event, '{{ name }}', false); clearSlots('{{ name }}')">
+			<button class="subtablinks" onclick="openSubTab(event, '{{ name }}', true); clearSlots('{{ name }}')">
 				<div>{{ name }}</div>
 				<img class="lozad" data-src={{ info['killer-image-alt'] }} height="80" width="80" credit="@sherman_amnezis">
 			</button>
