--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -21,6 +21,7 @@
 
 	<script type="text/javascript" src="{{ url_for('static', filename = 'functions.js') }}"></script>
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 </head>
 
