--- a/app/static/style_main.css
+++ b/app/static/style_main.css
@@ -56,7 +56,7 @@ body {
 	position: absolute;
 	top: 50%;
 	left: 70%;
-	z-index: 10;
+	z-index: 100;
 	display: none;
 	background: rgba(0, 0, 0, 0.8);
 	max-width: 500px;
@@ -77,7 +77,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	line-height: 140%;
-	background: url('/static/images/smoke-overlay.gif');
+	background: black url('/static/images/smoke-overlay.gif');
 	background-repeat: no-repeat;
 }
 
