oni slinger perks

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -34,12 +34,14 @@
 		<div class="dropdown-content">
 			<a href="/">Home</a>
 			<a href="/analysis">Analysis</a>
+			<a href="/memes">Memes</a>
 		</div>
 	</div>
 	<div class="page">
 		{% block content %}{% endblock %}
 	</div>
 	<div class="loading"></div>
+	<div class="empty"></div>
 </body>
 
 </html>
